--- a/_sass/components/_job.scss
+++ b/_sass/components/_job.scss
@@ -34,7 +34,7 @@
 		border-left: 1px solid #979797;
 
 		li {
-			padding-left: 2rem;
+			padding-left: 2.25rem;
 			margin-bottom: 1.5rem;
 
 			strong {
