--- a/_sass/pages/home/_about.scss
+++ b/_sass/pages/home/_about.scss
@@ -42,8 +42,12 @@
 
 .home-about-text {
 
-  li {
-    margin-left: -4rem;
+  ul {
+    transform: translateX(-2rem);
+  }
+
+  .page & li {
+    padding-left: 2rem;
   }
 
   @media only screen and (min-width: 640px) {
